2nd Year Archive/_Fundamentals of Programming Languages/Semester 2/Assignment 2/FoPL Assignment Two/gen/AssignmentTwo/assignmentGrammarParser.java
// Generated from C:/Users/joeki/OneDrive - Sheffield Hallam University/_Fundamentals of Programming Languages/Assignment 2/FoPL Assignment Two/src/AssignmentTwo\assignmentGrammar.g4 by ANTLR 4.9.1
package AssignmentTwo;

    package com.AssignmentTwo;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class assignmentGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, PROGBEGIN=16, 
		PROGEND=17, IDENTIFIER=18, VALUE=19, STRING=20, LETTER=21, UPPERCASE=22, 
		LOWERCASE=23, FLOAT=24, NUMBER=25, DIGIT=26, OP=27, ADD=28, SUB=29, MUL=30, 
		DIV=31, POW=32, EQUALS=33, BOOL_OP=34, COMPEQUALS=35, OR=36, AND=37, GTHAN=38, 
		LTHAN=39, LPARENS=40, RPARENS=41, LCURLY=42, RCURLY=43, LSQUARE=44, RSQUARE=45, 
		SCOLON=46, COLON=47, COMMA=48, POINT=49, SPEECHMARK=50, QUOTEMARK=51, 
		TRUE=52, FALSE=53, WHITESPACE=54, OPVALUE=55;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_stat_assignment = 3, 
		RULE_stat_assign_array = 4, RULE_stat_input = 5, RULE_stat_output = 6, 
		RULE_stat_if = 7, RULE_stat_for = 8, RULE_stat_while = 9, RULE_value = 10, 
		RULE_expression = 11, RULE_operand = 12, RULE_array = 13, RULE_expr_boolean = 14, 
		RULE_bool_operand = 15, RULE_function_definition = 16, RULE_function_signature = 17, 
		RULE_funcblock = 18, RULE_function_call = 19, RULE_args = 20, RULE_return = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "statement", "stat_assignment", "stat_assign_array", 
			"stat_input", "stat_output", "stat_if", "stat_for", "stat_while", "value", 
			"expression", "operand", "array", "expr_boolean", "bool_operand", "function_definition", 
			"function_signature", "funcblock", "function_call", "args", "return"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'const'", "'input'", "'print'", "'if'", "'then'", "'else if'", 
			"'else'", "'end if'", "'for'", "'in'", "'end for'", "'while'", "'end while'", 
			"'function'", "'return'", "'A long time ago in a galaxy far far away...'", 
			"'The End'", null, null, null, null, null, null, null, null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'^'", "'='", null, "'=='", "'||'", "'&&'", 
			"'>'", "'<'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "':'", 
			"','", "'.'", "'\"'", "'''", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "PROGBEGIN", "PROGEND", "IDENTIFIER", "VALUE", 
			"STRING", "LETTER", "UPPERCASE", "LOWERCASE", "FLOAT", "NUMBER", "DIGIT", 
			"OP", "ADD", "SUB", "MUL", "DIV", "POW", "EQUALS", "BOOL_OP", "COMPEQUALS", 
			"OR", "AND", "GTHAN", "LTHAN", "LPARENS", "RPARENS", "LCURLY", "RCURLY", 
			"LSQUARE", "RSQUARE", "SCOLON", "COLON", "COMMA", "POINT", "SPEECHMARK", 
			"QUOTEMARK", "TRUE", "FALSE", "WHITESPACE", "OPVALUE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "assignmentGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public assignmentGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGBEGIN() { return getToken(assignmentGrammarParser.PROGBEGIN, 0); }
		public TerminalNode PROGEND() { return getToken(assignmentGrammarParser.PROGEND, 0); }
		public List<Stat_assignmentContext> stat_assignment() {
			return getRuleContexts(Stat_assignmentContext.class);
		}
		public Stat_assignmentContext stat_assignment(int i) {
			return getRuleContext(Stat_assignmentContext.class,i);
		}
		public List<Stat_assign_arrayContext> stat_assign_array() {
			return getRuleContexts(Stat_assign_arrayContext.class);
		}
		public Stat_assign_arrayContext stat_assign_array(int i) {
			return getRuleContext(Stat_assign_arrayContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(PROGBEGIN);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==IDENTIFIER) {
				{
				setState(47);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(45);
					stat_assignment();
					}
					break;
				case 2:
					{
					setState(46);
					stat_assign_array();
					}
					break;
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13 || _la==LCURLY) {
				{
				setState(54);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LCURLY:
					{
					setState(52);
					block();
					}
					break;
				case T__13:
					{
					setState(53);
					function_definition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(PROGEND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LCURLY() { return getToken(assignmentGrammarParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(assignmentGrammarParser.RCURLY, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(LCURLY);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__8) | (1L << T__11) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(62);
				statement();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Stat_assignmentContext stat_assignment() {
			return getRuleContext(Stat_assignmentContext.class,0);
		}
		public Stat_assign_arrayContext stat_assign_array() {
			return getRuleContext(Stat_assign_arrayContext.class,0);
		}
		public Stat_inputContext stat_input() {
			return getRuleContext(Stat_inputContext.class,0);
		}
		public Stat_outputContext stat_output() {
			return getRuleContext(Stat_outputContext.class,0);
		}
		public Stat_ifContext stat_if() {
			return getRuleContext(Stat_ifContext.class,0);
		}
		public Stat_forContext stat_for() {
			return getRuleContext(Stat_forContext.class,0);
		}
		public Stat_whileContext stat_while() {
			return getRuleContext(Stat_whileContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(70);
				stat_assignment();
				}
				break;
			case 2:
				{
				setState(71);
				stat_assign_array();
				}
				break;
			case 3:
				{
				setState(72);
				stat_input();
				}
				break;
			case 4:
				{
				setState(73);
				stat_output();
				}
				break;
			case 5:
				{
				setState(74);
				stat_if();
				}
				break;
			case 6:
				{
				setState(75);
				stat_for();
				}
				break;
			case 7:
				{
				setState(76);
				stat_while();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_assignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(assignmentGrammarParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(assignmentGrammarParser.EQUALS, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(assignmentGrammarParser.SCOLON, 0); }
		public Stat_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterStat_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitStat_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitStat_assignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_assignmentContext stat_assignment() throws RecognitionException {
		Stat_assignmentContext _localctx = new Stat_assignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stat_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(79);
				match(T__0);
				}
			}

			setState(82);
			match(IDENTIFIER);
			setState(83);
			match(EQUALS);
			setState(84);
			value();
			setState(85);
			match(SCOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_assign_arrayContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(assignmentGrammarParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(assignmentGrammarParser.EQUALS, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(assignmentGrammarParser.SCOLON, 0); }
		public Stat_assign_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_assign_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterStat_assign_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitStat_assign_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitStat_assign_array(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_assign_arrayContext stat_assign_array() throws RecognitionException {
		Stat_assign_arrayContext _localctx = new Stat_assign_arrayContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stat_assign_array);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(IDENTIFIER);
			setState(88);
			match(EQUALS);
			setState(89);
			array();
			setState(90);
			match(SCOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_inputContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(assignmentGrammarParser.SCOLON, 0); }
		public Stat_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterStat_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitStat_input(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitStat_input(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_inputContext stat_input() throws RecognitionException {
		Stat_inputContext _localctx = new Stat_inputContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stat_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__1);
			setState(93);
			value();
			setState(94);
			match(SCOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_outputContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SCOLON() { return getToken(assignmentGrammarParser.SCOLON, 0); }
		public Stat_outputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterStat_output(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitStat_output(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitStat_output(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_outputContext stat_output() throws RecognitionException {
		Stat_outputContext _localctx = new Stat_outputContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stat_output);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__2);
			setState(97);
			value();
			setState(98);
			match(SCOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_ifContext extends ParserRuleContext {
		public List<Expr_booleanContext> expr_boolean() {
			return getRuleContexts(Expr_booleanContext.class);
		}
		public Expr_booleanContext expr_boolean(int i) {
			return getRuleContext(Expr_booleanContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public Stat_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterStat_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitStat_if(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitStat_if(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_ifContext stat_if() throws RecognitionException {
		Stat_ifContext _localctx = new Stat_ifContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stat_if);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__3);
			setState(101);
			expr_boolean();
			setState(102);
			match(T__4);
			setState(103);
			block();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5 || _la==T__6) {
				{
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(104);
					match(T__5);
					setState(105);
					expr_boolean();
					setState(106);
					match(T__4);
					setState(107);
					block();
					}
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(114);
				match(T__6);
				setState(115);
				block();
				}
			}

			setState(118);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_forContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(assignmentGrammarParser.IDENTIFIER, 0); }
		public List<TerminalNode> OPVALUE() { return getTokens(assignmentGrammarParser.OPVALUE); }
		public TerminalNode OPVALUE(int i) {
			return getToken(assignmentGrammarParser.OPVALUE, i);
		}
		public TerminalNode COMMA() { return getToken(assignmentGrammarParser.COMMA, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Stat_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterStat_for(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitStat_for(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitStat_for(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_forContext stat_for() throws RecognitionException {
		Stat_forContext _localctx = new Stat_forContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stat_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__8);
			setState(121);
			match(IDENTIFIER);
			setState(122);
			match(T__9);
			setState(123);
			match(OPVALUE);
			setState(124);
			match(COMMA);
			setState(125);
			match(OPVALUE);
			setState(126);
			block();
			setState(127);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_whileContext extends ParserRuleContext {
		public Expr_booleanContext expr_boolean() {
			return getRuleContext(Expr_booleanContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Stat_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).enterStat_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof assignmentGrammarListener ) ((assignmentGrammarListener)listener).exitStat_while(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assignmentGrammarVisitor ) return ((assignmentGrammarVisitor<? extends T>)visitor).visitStat_while(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_whileContext stat_while() throws RecognitionException {
		Stat_whileContext _localctx = new Stat_whileContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stat_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__11);
			setState(130);
			expr_boolean();
			setState(131);
			block();
			setState(132);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
